--- a/neue Portfolio/main.css
+++ b/neue Portfolio/main.css
@@ -181,4 +181,54 @@ h1,h2,h3,h4,h5,h6{
 .mobile-nav-toggle i{
     color: #fff;
 }
+.mobile-nav{
+    position: fixed;
+    top: 55px;
+    right: 15px;
+    bottom: 15px;
+    left: 15px;
+    z-index: 9999;
+    overflow-y: auto;
+    background: rgba(0, 0, 0, 0.7);
+    transition: ease-in-out 0.2s;
+    opacity: 0;
+    visibility: hidden;
+    border-radius: 10px;
+    padding: 10px 0;
+    border: 2px solid rgba(255, 255, 255, 0.12);
+}
+.mobile-nav * {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.mobile-nav-active{
+    overflow: hidden;
+}
+.mobile-nav-active .mobile-nav{
+    opacity: 1;
+    visibility: visible;
+}
+.mobile-nav a{
+    display: block;
+    position: relative;
+    color: #fff;
+    padding: 10px 20px;
+    font-weight: 500;
+    outline: none;
+}
+.mobile-nav a:hover,
+.mobile-nav .active > a,
+.mobile-nav li:hover > a{
+    color: #18d26e;
+    text-decoration: none;
+}
+@media (max-width:768px){
+    #header.header-top{
+        height: 60px;
+    }
+    #header.header-top h1{
+        font-size:26px;
+    }
+}
  
