--- a/neue Portfolio/main.css
+++ b/neue Portfolio/main.css
@@ -26,6 +26,15 @@
   .nav-link {
     margin: 0 1rem;
   }
+  .nav-links a{
+      text-decoration: none;
+      color: white;
+  }
+  .nav-links a:hover{
+      font-weight: 800;
+      color: teal;
+  }
+
   #banner {
     margin: 5rem 0;
     width: 100%;
@@ -53,6 +62,10 @@
     color: white;
     background: rgb(185, 95, 11);
   }
+  .banner-text button:hover{
+      font-size: 1.2rem;
+      background: black;
+  }
   .img {
     width: 100%;
     height: 100%;
@@ -64,12 +77,23 @@
     border-image-slice: 1;
     border-top: 2px solid;
     border-bottom: 2px solid;
-    border-image-source: linear-gradient(to left, black, rgb(185, 98, 11));
+    border-image-source: linear-gradient(to left, black, black);
+    
   }
   .img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+  .banner-text h2 span{
+    color: #fff;
+    border-bottom: 2px solid #18d26e;
+    padding-bottom: 6px;
+  }
+  .banner-text h2 span:hover {
+    color: #fff;
+    border-bottom: 2px solid rgb(185, 95, 11);
+    padding-bottom: 6px;
   }
   
   #about {
