--- a/neue Portfolio/main.css
+++ b/neue Portfolio/main.css
@@ -13,6 +13,11 @@
     margin: 0 auto;
     color: #f0f0f0;
   }
+  #logo img{
+      width: 3rem;
+      height: 3rem;
+      background-color: rgb(185, 183, 183);
+  }
   nav {
     display: flex;
     justify-content: space-between;
@@ -32,7 +37,7 @@
   }
   .nav-links a:hover{
       font-weight: 800;
-      color: teal;
+      color: rgb(185, 95, 11);
   }
 
   #banner {
@@ -63,8 +68,8 @@
     background: rgb(185, 95, 11);
   }
   .banner-text button:hover{
-      font-size: 1.2rem;
       background: black;
+      
   }
   .img {
     width: 100%;
@@ -76,7 +81,7 @@
     z-index: -2;
     border-image-slice: 1;
     border-top: 2px solid;
-    border-bottom: 2px solid;
+    /* border-bottom: 2px solid; */
     border-image-source: linear-gradient(to left, black, black);
     
   }
@@ -102,6 +107,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
   }
   .about-text {
     width: 50%;
@@ -126,6 +132,7 @@
     width: 100%;
     height: 70vh;
     margin: 5rem 0;
+    
   }
   #vid h3 {
     font-size: 4rem;
