--- a/neue Portfolio/main.css
+++ b/neue Portfolio/main.css
@@ -14,9 +14,9 @@
     color: #f0f0f0;
   }
   #logo img{
-      width: 3rem;
-      height: 3rem;
-      background-color: rgb(185, 183, 183);
+      width: 4rem;
+      height: 4rem;
+      /* background-color: rgb(185, 183, 183); */
   }
   nav {
     display: flex;
@@ -67,6 +67,10 @@
     color: white;
     background: rgb(185, 95, 11);
   }
+  .banner-text button a{
+    text-decoration: none;
+    color: #fff;
+  }
   .banner-text button:hover{
       background: black;
       
@@ -113,6 +117,7 @@
   .about-text {
     width: 50%;
     margin-right: 5rem;
+    margin-left: 2%;
   }
   .about-text h2 {
     font-size: 3rem;
@@ -120,9 +125,11 @@
   }
   .about-text p {
     line-height: 160%;
+    
   }
   .about-img {
-    height: 70%;
+    height: 90%;
+    width: 60%;
   }
   #vid {
     position: relative;
@@ -186,3 +193,11 @@
     object-fit: cover;
     opacity: 0.8;
   }
+  @media  (max-width: 664px){
+    .container{
+      display: flex;
+      flex-direction: column;
+    }
+  }
+    
+  
