--- a/neue Portfolio/main.css
+++ b/neue Portfolio/main.css
@@ -1,203 +1,227 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  body {
-    font-family: "Montserrat", sans-serif;
-    min-width: 100%;
-    min-height: 100vh;
-    background: rgba(0, 0, 0, 0.938);
-  }
-  .container {
-    width: 80%;
-    margin: 0 auto;
-    color: #f0f0f0;
-  }
-  #logo img{
-      width: 4rem;
-      height: 4rem;
-      /* background-color: rgb(185, 183, 183); */
-  }
-  nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem 0;
-  }
-  .nav-links {
-    display: flex;
-    align-items: center;
-  }
-  .nav-link {
-    margin: 0 1rem;
-  }
-  .nav-links a{
-      text-decoration: none;
-      color: white;
-  }
-  .nav-links a:hover{
-      font-weight: 800;
-      color: rgb(185, 95, 11);
-  }
-
-  #banner {
-    margin: 5rem 0;
-    width: 100%;
-    height: 50vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .banner-text {
-    width: 40%;
-  }
-  .banner-text h1 {
-    font-size: 5rem;
-  }
-  .banner-text p {
-    font-size: 1.2rem;
-    margin: 2rem 0;
-  }
-  .banner-text button {
-    border: none;
-    border-radius: 1rem;
-    background: none;
-    padding: 0.5rem 1rem;
-    font-size: 1.1rem;
-    color: white;
-    background: rgb(185, 95, 11);
-  }
-  .banner-text button a{
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: "Montserrat", sans-serif;
+  min-width: 100%;
+  min-height: 100vh;
+  background: rgba(0, 0, 0, 0.938);
+}
+.container {
+  width: 80%;
+  margin: 0 auto;
+  color: #f0f0f0;
+}
+#logo img{
+    width: 4rem;
+    height: 4rem;
+    background-color: rgb(12, 12, 12);
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 0;
+}
+.nav-links {
+  display: flex;
+  align-items: center;
+}
+.nav-link {
+  margin: 0 1rem;
+}
+.nav-links a{
     text-decoration: none;
-    color: #fff;
-  }
-  .banner-text button:hover{
-      background: black;
-      
-  }
-  .img {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-  .banner-img {
-    width: 50%;
-    z-index: -2;
-    border-image-slice: 1;
-    border-top: 2px solid;
-    /* border-bottom: 2px solid; */
-    border-image-source: linear-gradient(to left, black, black);
+    color: white;
+}
+.nav-links a:hover{
+    font-weight: 800;
+    color: rgb(185, 95, 11);
+}
+
+#banner {
+  margin: 5rem 0;
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.banner-text {
+  width: 40%;
+}
+.banner-text h1 {
+  font-size: 5rem;
+}
+.banner-text p {
+  font-size: 1.2rem;
+  margin: 2rem 0;
+}
+.banner-text button {
+  border: none;
+  border-radius: 1rem;
+  background: none;
+  padding: 0.5rem 1rem;
+  font-size: 1.1rem;
+  color: white;
+  background: rgb(185, 95, 11);
+}
+.banner-text button a{
+  text-decoration: none;
+  color: #fff;
+}
+.banner-text button:hover{
+    background: black;
     
-  }
-  .img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+}
+.img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.banner-img {
+  width: 50%;
+  z-index: -2;
+  border-image-slice: 1;
+  border-top: 2px solid;
+  /* border-bottom: 2px solid; */
+  border-image-source: linear-gradient(to left, black, black);
   
-  .banner-text h2 span{
-    color: #fff;
-    border-bottom: 2px solid #18d26e;
-    padding-bottom: 6px;
-  }
-  .banner-text h2 span:hover {
-    color: #fff;
-    border-bottom: 2px solid rgb(185, 95, 11);
-    padding-bottom: 6px;
-  }
+}
+.img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.banner-text h2 span{
+  color: rgb(185, 95, 11);
+  border-bottom: 3px solid #18d26e;
+  padding-bottom: 6px;
+}
+.banner-text h2 span:hover {
+  color: #fff;
+  border-bottom: 2px solid rgb(185, 95, 11);
+  padding-bottom: 6px;
+}
+
+#about {
+  margin: 5rem 0;
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   
-  #about {
-    margin: 5rem 0;
-    height: 60vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
-  }
-  .about-text {
-    width: 50%;
-    margin-right: 5rem;
-    margin-left: 2%;
-  }
-  .about-text h2 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-  }
-  .about-text p {
-    line-height: 160%;
-    
-  }
-  .about-img {
-    height: 90%;
-    width: 60%;
-  }
-  #vid {
-    position: relative;
+}
+.about-text {
+  width: 50%;
+  margin-right: 5rem;
+  margin-left: 2%;
+}
+.about-text2{
+  width: 30%;
+  margin-right: 5rem;
+  margin-left: 2%;
+}
+.about-text2 h2 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+.about-text2 p {
+  line-height: 160%;
+  
+}
+.about-text h2 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+.about-text p {
+  line-height: 160%;
+  
+}
+.about-img {
+  height: 90%;
+  width: 60%;
+}
+#vid {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70vh;
+  margin: 5rem 0;
+  
+}
+#vid h3 {
+  font-size: 4rem;
+}
+span {
+  color: rgb(185, 98, 11);
+}
+.card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 4rem;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: gray;
+  border-radius: 1rem;
+  padding: 1.5rem;
+  margin: 2rem;
+  box-shadow: 1px 1px 1px -1px gray;
+  color: black;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+.card-text {
+  font-size: 1.2rem;
+}
+.card:hover {
+  transform: scale(1.1);
+}
+.icon {
+  font-size: 3rem;
+  margin: 2rem;
+}
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -999;
+  background: black;
+}
+.video video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.8;
+}
+@media  (max-width: 664px){
+  .container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 70vh;
-    margin: 5rem 0;
-    
   }
-  #vid h3 {
-    font-size: 4rem;
-  }
-  #vid h3 span {
-    color: rgb(185, 98, 11);
-  }
-  .card-wrapper {
+}
+@media  (max-width: 330px){
+  .container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 4rem;
   }
-  .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: gray;
-    border-radius: 1rem;
-    padding: 1.5rem;
-    margin: 2rem;
-    box-shadow: 1px 1px 1px -1px gray;
-    color: black;
-    cursor: pointer;
-    transition: transform 0.3s ease;
+  .img{
+    width: 8rem;
+    height: 18rem;
   }
-  .card-text {
-    font-size: 1.2rem;
-  }
-  .card:hover {
-    transform: scale(1.1);
-  }
-  .icon {
-    font-size: 3rem;
-    margin: 2rem;
-  }
-  .video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -999;
-    background: black;
-  }
-  .video video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.8;
-  }
-  @media  (max-width: 664px){
-    .container{
-      display: flex;
-      flex-direction: column;
-    }
-  }
-    
-  
+}
+h2 h3{
+  font-size: 2px;
+}
