--- a/neue Portfolio/main.css
+++ b/neue Portfolio/main.css
@@ -40,7 +40,7 @@ nav {
     color: rgb(185, 95, 11);
 }
 
-#banner {
+#developer {
   margin: 5rem 0;
   width: 100%;
   height: 50vh;
@@ -48,17 +48,17 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
-.banner-text {
+.developer-text {
   width: 40%;
 }
-.banner-text h1 {
+.developer-text h1 {
   font-size: 5rem;
 }
-.banner-text p {
+.developer-text p {
   font-size: 1.2rem;
   margin: 2rem 0;
 }
-.banner-text button {
+.developer-text button {
   border: none;
   border-radius: 1rem;
   background: none;
@@ -67,11 +67,11 @@ nav {
   color: white;
   background: rgb(185, 95, 11);
 }
-.banner-text button a{
+.developer-text button a{
   text-decoration: none;
   color: #fff;
 }
-.banner-text button:hover{
+.developer-text button:hover{
     background: black;
     
 }
@@ -80,7 +80,7 @@ nav {
   height: 100%;
   overflow: hidden;
 }
-.banner-img {
+.developer-img {
   width: 50%;
   z-index: -2;
   border-image-slice: 1;
@@ -95,12 +95,12 @@ nav {
   object-fit: cover;
 }
 
-.banner-text h2 span{
+.developer-text h2 span{
   color: rgb(185, 95, 11);
   border-bottom: 3px solid #18d26e;
   padding-bottom: 6px;
 }
-.banner-text h2 span:hover {
+.developer-text h2 span:hover {
   color: #fff;
   border-bottom: 2px solid rgb(185, 95, 11);
   padding-bottom: 6px;
@@ -212,7 +212,7 @@ span {
     display: flex;
     flex-direction: column;
   }
-  #banner{
+  #developer{
     display: flex;
     flex-direction: column;
   }
