--- a/neue Portfolio/meine_Portfolio/main.css
+++ b/neue Portfolio/meine_Portfolio/main.css
@@ -16,7 +16,7 @@ body {
 #logo img{
     width: 4rem;
     height: 4rem;
-    background-color: rgb(12, 12, 12);
+    background-color: rgba(0, 0, 0, 0.938);
 }
 nav {
   display: flex;
@@ -72,7 +72,7 @@ nav {
   color: #fff;
 }
 .developer-text button:hover{
-    background: black;
+    background: rgba(0, 0, 0, 0.938);
     
 }
 .img {
@@ -177,7 +177,7 @@ span {
   padding: 1.5rem;
   margin: 2rem;
   box-shadow: 1px 1px 1px -1px gray;
-  color: black;
+  color: rgba(0, 0, 0, 0.938);
   cursor: pointer;
   transition: transform 0.3s ease;
 }
@@ -198,7 +198,7 @@ span {
   width: 100%;
   height: 100%;
   z-index: -999;
-  background: black;
+  background: rgba(0, 0, 0, 0.938);
 }
 .video video {
   width: 100%;
