--- a/neue Portfolio/meine_Portfolio/main.css
+++ b/neue Portfolio/meine_Portfolio/main.css
@@ -16,7 +16,6 @@ body {
 #logo img{
     width: 4rem;
     height: 4rem;
-    background-color: rgba(0, 0, 0, 0.938);
 }
 nav {
   display: flex;
@@ -167,7 +166,7 @@ span {
   justify-content: center;
   margin-top: 4rem;
 }
-.card {
+.card, .card2 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -205,6 +204,14 @@ span {
   height: 100%;
   object-fit: cover;
   opacity: 0.8;
+}
+#projekts {
+  margin: 5rem 0;
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
 }
 
 @media  (max-width: 535px){
