--- a/neue Portfolio/meine_Portfolio/main.css
+++ b/neue Portfolio/meine_Portfolio/main.css
@@ -166,7 +166,7 @@ span {
   justify-content: center;
   margin-top: 4rem;
 }
-.card, .card2 {
+.card, .card2{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -190,6 +190,27 @@ span {
 .icon {
   font-size: 5rem;
   margin: 2rem;
+}
+.kinder{
+  background: url(gallery/assets/gallery/vitolda-klein-ZodLM3j8dH8-unsplash.jpg);
+  background-size: cover;
+  width: 10rem;
+  height: 15rem;
+  color: rgb(235, 231, 17);
+}
+.brücke{
+  background: url(gallery/assets/gallery/bridge-4785964.jpg);
+  background-size: 100% 100%;
+  width: 10rem;
+  height: 15rem;
+  color: rgb(231, 235, 22);
+}
+.space{
+  background: url(gallery/assets/gallery/apollo_11_launch_-_gpn-2000-000630_1.jpg);
+  background-size: cover;
+  width: 10rem;
+  height: 15rem;
+  color: rgb(235, 220, 19);
 }
 .video {
   position: absolute;
