card name zasammengepasst

--- a/main.css
+++ b/main.css
@@ -185,21 +185,21 @@ span {
   font-size: 5rem;
   margin: 2rem;
 }
-.kinder {
+.weather {
   background: url(https://foto.haberler.com/haber/2020/06/05/hava-durumu-5-haziran-meteoroloji-hava-durumu-13292567_8759_amp.jpg);
   background-size: cover;
   width: 10rem;
   height: 15rem;
   color: rgb(235, 231, 17);
 }
-.brücke {
+.movies {
   background: url(https://www.naijatechguide.com/wp-content/uploads/2019/05/Top-best-Android-Apps-to-watch-and-stream-free-movies-online-600x400.jpg);
   background-size: 100% 100%;
   width: 10rem;
   height: 15rem;
   color: rgb(231, 235, 22);
 }
-.space {
+.game {
   background: url(https://az779572.vo.msecnd.net/screens-400/bde4deffc31d471e86c761f6541e3ff2);
   background-position: 85% 30%;
   width: 10rem;
